fixed all column spacings

--- a/src/components/AboutUsPage/aboutUs.scss
+++ b/src/components/AboutUsPage/aboutUs.scss
@@ -30,46 +30,45 @@
 
     &__bgc2 {
       color: white;
-      padding: 4rem 0;
+      padding: 3rem 0;
       width: 100%;
       height: 100%;
     }
   }
 
   .wrap {
-    margin: 2rem 5rem;
-  }
-
-  .col-sm-3 {
-    margin-bottom: 4rem;
+    margin: 2rem 6rem;
   }
 
   &__icon {
-    max-width: 80%;
+    max-width: 90%;
     margin: 0 auto;
   }
 
   &__image {
     max-width: 100%;
-    margin: 0 0 0 -1.5rem;
-    border: none;
+    border: 0;
+    padding: 0;
+    -webkit-box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.15);
   }
 
   &__label {
     font-family: "Roboto", sans-serif;
     font-weight: 300;
-    font-size: 1.1rem;
-    line-height: 1.25rem;
+    font-size: 1.15rem;
+    line-height: 1.35rem;
     background-color: $orange;
     color: white;
     border-radius: 0.5rem;
     padding: 0.65rem;
-    margin: -1.25rem auto;
+    margin: -1.25rem -1.5rem 2rem 2.5rem;
     position: relative;
     z-index: 100;
 
     &__name {
-      font-size: 1.15rem;
+      font-size: 1.25rem;
       font-weight: 700;
     }
   }
